src/components/flasherpants/style.scss
:export {
  spacersMap: #{$spacers};
}

:local(.containment-module) {
  &.p-0 {
    .row {
      margin-left: 0 !important;
      margin-right: 0 !important;

      > .col {
        &:first-child { padding-left: 0 !important; }
        &:last-child { padding-right: 0 !important; }
      }
    }

  }
}

:local(.nav-fixed-module) {
  [class$="buttons-module"] [class^="btn"] {
    margin-bottom: 0 !important;
  }
}

:local(.buttons-module) {
  display: inline-block;

  .btn {
    &:last-child {
      margin-right: 0 !important;
    }
  }
}

:local(.buttons-group-module) {
  &:last-child {
    margin-right: 0;
  }
}

